fix: align verticaly title in card

--- a/css/index.css
+++ b/css/index.css
@@ -51,7 +51,15 @@ a {
     text-align: center;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-end;
+}
+
+.cardTitle {
+    font-weight: bold;
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .container {
